--- a/main.css
+++ b/main.css
@@ -4,15 +4,40 @@
     box-sizing: border-box;
     font-family: Roboto, sans-serif;
     background-color: #fffdd0;
+    font-size: 38px;
 }
 
-.titulo {
-    margin-top: 180px;
-    margin-
-    text-align: center;
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh
 }
 
-.caixa {
+.container {
     text-align: center;
-    width: 180px;
+    margin-top: -200px;
 }
+
+.input-container {
+    display: flex;
+    align-items: baseline;
+}
+
+.input-container input {
+    width: 300px;
+    border: 1px solid #ccc;
+    border-radius: 5px 5px ;
+}
+
+.input-container button {
+    padding: 0px 20px;
+    border: none;
+    background-color: #808080;
+    color: white;
+    border-radius: 5px 5px;
+    cursor: pointer;
+    margin-left: 15px;
+}
+
