--- a/main.css
+++ b/main.css
@@ -5,18 +5,73 @@
     font-family: 'Roboto', sans-serif;
 }
 
+html {
+    overflow-x: hidden;
+}
+
+.container {
+    max-width: 1024px;
+    width: 100%;
+    margin: 0 auto;
+}
+
 header, footer {
     background-color: #8F2BE0;
     color: #fff;
     padding-top: 16px;
 }
 
-header h1 {
-    margin-right: 16px;
+header {
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 1px;
 }
 
-.container {
-    max-width: 1024px;
+header > .container,
+footer > .container {
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 16px;
+}
+
+nav {
+    background-color: #580E94;
+    padding: 16px ;
+    #display: none;
+    border-radius: 20px
+}
+
+nav li {
+    list-style: none;
+    display: inline;
+    font-size: 16px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+nav li:not(:last-child) {
+    margin-right: 26px;
+}
+
+nav li a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.menu-hamburguer {
+    width: 32px;
+    cursor: pointer
+}
+
+.menu-hamburguer span {
+    height: 2px;
     width: 100%;
+    background-color #fff;
+    display:block;
+    margin-bottom: 4px;
 }
 
+.container-flex {
+    display: flex;
+}
