--- a/Projeto3/main.css
+++ b/Projeto3/main.css
@@ -53,3 +53,10 @@ body {
     text-decoration: none;
 }
 
+@media (max-width: 767px) {
+    .carousel-item- img {
+        heigh: 280px;
+    }
+}
+
+
